--- a/styles/editor.less
+++ b/styles/editor.less
@@ -2,7 +2,7 @@
 // Editor styles (background, gutter, guides)
 
 atom-text-editor, // <- remove when Shadow DOM can't be disabled
-:host {
+atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
@@ -10,7 +10,7 @@ atom-text-editor, // <- remove when Shadow DOM can't be disabled
     background-color: @syntax-cursor-line;
   }
 
-  .invisible {
+  .syntax--invisible {
     color: @syntax-text-color;
   }
 
@@ -27,11 +27,11 @@ atom-text-editor, // <- remove when Shadow DOM can't be disabled
     box-sizing: border-box;
   }
 
-  .invisible-character {
+  .syntax--invisible-character {
     color: @syntax-invisible-character-color;
   }
 
-  .indent-guide {
+  .syntax--indent-guide {
     color: @syntax-indent-guide-color;
   }
 
