Fixed invisible characters and indent guides

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -10,7 +10,7 @@ atom-text-editor {
     background-color: @syntax-cursor-line;
   }
 
-  .syntax--invisible {
+  .invisible {
     color: @syntax-text-color;
   }
 
@@ -27,11 +27,11 @@ atom-text-editor {
     box-sizing: border-box;
   }
 
-  .syntax--invisible-character {
+  .invisible-character {
     color: @syntax-invisible-character-color;
   }
 
-  .syntax--indent-guide {
+  .indent-guide {
     color: @syntax-indent-guide-color;
   }
 
