comments change color on hover

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -11,16 +11,16 @@
 @mono-3: hsl(@syntax-hue, 17%, 45%);
 
 // Colors -----------------------------------
-@hue-1:   hsl(197, 92%, 78%); // <-cyan
-@hue-2:   hsl(211, 97%, 98%); // <-blue
-@hue-3:   hsl(240, 58%, 68%); // <-purple
-@hue-4:   hsl(177, 72%, 77%); // <-green
+@hue-1:   hsl(197, 92%, 78%); // <-cyan #93ddfb
+@hue-2:   hsl(211, 97%, 98%); // <-white #f5faff
+@hue-3:   hsl(240, 58%, 68%); // <-purple #7e7edd
+@hue-4:   hsl(177, 72%, 77%); // <-teal #9aefea
 
-@hue-5:   hsl(211, 60%, 70%); // <-red 1
-@hue-5-2: hsl(211, 55%, 55%); // <-red 2
+@hue-5:   hsl(211, 60%, 70%); // <-blue 1 ##85b1e0
+@hue-5-2: hsl(211, 55%, 55%); // <-blue 2 #4d8acb
 
-@hue-6:   hsl(282, 82%, 80%); // <-orange 1
-@hue-6-2: hsl(264, 86%, 70%); // <-orange 2
+@hue-6:   hsl(282, 82%, 80%); // <-pink 1 #dda2f6
+@hue-6-2: hsl(264, 86%, 70%); // <-pink 2 #a571f4
 
 
 // Base colors -----------------------------------
@@ -29,3 +29,6 @@
 @syntax-gutter: darken(@syntax-fg, 36%);
 @syntax-guide:  fade(@syntax-fg, 15%);
 @syntax-accent: hsl(@syntax-hue, 100%, 66% );
+
+// Misc ----------------------------------
+@comment-hover: rgb(116, 246, 207);
