--- a/styles/language.less
+++ b/styles/language.less
@@ -3,6 +3,12 @@
 .syntax--comment {
   color: @mono-3;
   font-style: italic;
+  transition-duration:1.5s;
+
+.syntax--comment:hover{
+  color: @comment-hover;
+  font-style:italic;
+}
 
   .syntax--markup.syntax--link {
     color: @mono-3;
